# inference_server

./: Cargo.toml  Makefile  README.md  proposal.md
embedding_generator/: main.rs
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  index.tsx
src/: api.rs  main.rs  state.rs
src/models/: bert.rs  llama.rs
