[package]
name = "inference_server"
version = "0.1.0"
edition = "2021"

[dependencies]
candle = { version = "0.3.1", package = "candle-core" }
candle-transformers = { version = "0.3", features = ["accelerate"], default-features = false }
candle-nn = "0.3.1"
tokenizers = "0.15.0"
hf-hub = "0.3.2"
anyhow = "1.0.75"
serde_json = "1.0.107"
actix-web = "4.9.0"
serde = { version = "1.0.188" }
env_logger = "0.10"
bincode = "2.0.0-rc.3"
csv = "1.3.0"
rayon = "1.8.0"

[lib]
name = "inference_server"
path = "src/lib.rs"

[[bin]]
name = "inference_server"
path = "src/main.rs"

[[bin]]
name = "embedding_generator"
path = "embedding_generator/main.rs"
